# rrsf-replication

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  env.py  fitting.py  model.md  model_explained.md  pyproject.toml  setup.md
models/: __init__.py  base.py  mb.py  mf.py  mfp.py  rrmb.py  rrmf.py  rrsf.py  sf.py  sfp.py
notebooks/: 01_env.ipynb  02_models.ipynb  03_fitting.ipynb  qualitative_replication.ipynb
