[project]
name = "replication"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "nbformat>=5.10.4",
    "numpy>=2.0.2",
    "pandas>=2.3.3",
    "plotly>=6.6.0",
    "python-docx>=1.2.0",
    "scipy>=1.13.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.31.0",
]
